--- a/src/main/resources/messages_pl.properties
+++ b/src/main/resources/messages_pl.properties
@@ -20,13 +20,13 @@ mail.unblocked.body=Twoje konto zosta?o odblokowane.
 mail.unblock.account.subject=Konto zosta?o zablokowane
 mail.unblock.account.body=Twoje konto zosta?o zablokowane, poniewa? nie logowa?e? si? od ostatnich 30 dni. Kliknij w podany link aby odblokowa? konto: {0}
 mail.verify.account.subject=Potwierdzenie konta
-mail.verify.account.body=Kliknij w podany link aby potwierdzi? konto: {0}
+mail.verify.account.body=Kliknij w podany link aby potwierdzi\u0107 konto: {0}
 mail.delete.account.subject=Usuni?cie konta
 mail.delete.account.body=Twoje konto zosta?o usuni?te. Skontaktuj si? z administratorem.
 mail.locked.until.subject=Konto zablokowane
 mail.locked.until.body=Twoje konto zosta?o zablokowane do {0} UTC+00:00 z powodu zbyt wielu prób wpisania z?ego has?a.
-mail.after.verify.subject=Konto zweryfikowane pomy?lnie.
-mail.after.verify.body=Gratulacj?!Twoje konto zosta?o zweryfikowane.Posiadasz teraz rol?  : {0}.
+mail.after.verify.subject=Konto zweryfikowane pomy\u015Blnie.
+mail.after.verify.body=Gratulacj\u0119! Twoje konto zosta\u0142o zweryfikowane. Mo\u017Cesz si\u0119 teraz zalogowa\u0107 na swoje konto.
 mail.admin.login.subject=Nowa sesja administratora
 mail.admin.login.body=Informujemy o nowej sesji administratora. Adres IP : {0} data: {1} UTC+00:00
 mail.event.cancel.subject=Odwo?anie wydarzenia
